[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/HUD/Meters HUD.png" type="Texture" id=1]
[ext_resource path="res://assets/HUD/Health.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/PauseMenu.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/Sprites/Objects/ValMedal.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/PauseMenuLevel.gd" type="Script" id=6]
[ext_resource path="res://assets/HUD/PauseMenuTextLevelNormal.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/PauseMenuTextLevelQuit.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/PauseMenuTextLevelControls.png" type="Texture" id=9]
[ext_resource path="res://assets/HUD/PauseMenuTextLevelTitle.png" type="Texture" id=10]
[ext_resource path="res://assets/HUD/PauseMenuSelect.png" type="Texture" id=11]
[ext_resource path="res://assets/HUD/PauseMenuControlSelect.png" type="Texture" id=12]
[ext_resource path="res://assets/Font/AzureVR.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 13 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Bars" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="VisibleHealth" type="TextureRect" parent="."]
margin_left = 22.0
margin_top = 16.0
margin_right = 42.0
margin_bottom = 142.0
rect_clip_content = true

[node name="HealthMeter" type="TextureRect" parent="VisibleHealth"]
margin_top = -2.0
margin_right = 20.0
margin_bottom = 126.0
texture = ExtResource( 2 )
expand = true

[node name="PauseMenu" type="TextureRect" parent="."]
visible = false
margin_left = 34.0
margin_top = 32.0
margin_right = 806.0
margin_bottom = 568.0
texture = ExtResource( 3 )
script = ExtResource( 6 )

[node name="ValcoinRed" type="Sprite" parent="PauseMenu"]
position = Vector2( 474, 98 )
texture = ExtResource( 5 )
hframes = 6
vframes = 4

[node name="ValcoinBlue" type="Sprite" parent="PauseMenu"]
position = Vector2( 574, 138 )
texture = ExtResource( 5 )
hframes = 6
vframes = 4
frame = 6
__meta__ = {
"_editor_description_": ""
}

[node name="ValcoinGreen" type="Sprite" parent="PauseMenu"]
position = Vector2( 674, 178 )
texture = ExtResource( 5 )
hframes = 6
vframes = 4
frame = 12
__meta__ = {
"_editor_description_": ""
}

[node name="PauseText0" type="TextureRect" parent="PauseMenu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="PauseText1" type="TextureRect" parent="PauseMenu"]
visible = false
margin_right = 772.0
margin_bottom = 536.0
texture = ExtResource( 8 )

[node name="PauseText2" type="TextureRect" parent="PauseMenu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="UpButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 145.0
margin_top = 233.0
margin_right = 301.0
margin_bottom = 252.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "AZURE azure :3"
clip_text = true

[node name="DownButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 145.0
margin_top = 275.0
margin_right = 301.0
margin_bottom = 294.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "Easter egg lol"
clip_text = true

[node name="LeftButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 145.0
margin_top = 317.0
margin_right = 301.0
margin_bottom = 336.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "Valerie is very sexy"
clip_text = true

[node name="RightButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 145.0
margin_top = 359.0
margin_right = 301.0
margin_bottom = 378.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "and pretty hehe~"
clip_text = true

[node name="JumpButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 526.0
margin_top = 233.0
margin_right = 682.0
margin_bottom = 252.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "But seriously...thank"
clip_text = true

[node name="AttackButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 526.0
margin_top = 275.0
margin_right = 682.0
margin_bottom = 294.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "you so much for"
clip_text = true

[node name="DashButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 526.0
margin_top = 317.0
margin_right = 682.0
margin_bottom = 336.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "playing my game. It"
clip_text = true

[node name="PauseButtonLabel" type="Label" parent="PauseMenu/PauseText2"]
margin_left = 526.0
margin_top = 359.0
margin_right = 682.0
margin_bottom = 378.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "means so much to me"
clip_text = true

[node name="PauseText3" type="TextureRect" parent="PauseMenu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )

[node name="Cursor1" type="Sprite" parent="PauseMenu"]
visible = false
position = Vector2( 255, 286 )
texture = ExtResource( 11 )

[node name="Cursor2" type="Sprite" parent="PauseMenu"]
visible = false
position = Vector2( 564, 285 )
texture = ExtResource( 12 )
